Removed .gradle